# FeedBack

./: .env.dist  .gitignore  README.md  alembic.ini  pyproject.toml
src/: configuration.py  providers.py
src/bot/: __main__.py  dispatcher.py  injections.py
src/bot/api/: __init__.py  setup.py
src/bot/dialogs/: __init__.py  root.py
src/bot/dialogs/admins/: __init__.py  callable.py  window.py
src/bot/dialogs/admins/stat/: __init__.py  getter.py  window.py
src/bot/dialogs/admins/ticket_panel/: __init__.py  callable.py  getter.py  window.py
src/bot/dialogs/service/: __init__.py  on_ban.py  on_exception.py
src/bot/dialogs/service/lang_select/: __init__.py  getter.py  (+2 more)
src/bot/dialogs/users/: __init__.py
src/bot/filters/: __init__.py  ban_filter.py  is_admin.py  is_select_lang.py  translator_filter.py
src/bot/middlewares/: __init__.py  container_md.py  register_md.py
src/bot/states/: __init__.py  states.py
src/bot/utls/: __init__.py  misc.py
src/bot/widgets/: __init__.py  text.py
src/db/: __init__.py  database.py
src/db/enums/: __init__.py  admin_action_enum.py  ticket_enum.py  user_enum.py
src/db/models/: __init__.py  admin_action.py  ban.py  ticket.py  user.py
src/db/redis_dc/: user.py
src/db/repos/: __init__.py  abstract.py  admin_action.py  ban.py  ticket.py  user.py
src/texts/en/: root.ftl  service.ftl
src/texts/en/admin/: root.ftl  stat.ftl  ticket.ftl
src/texts/en/user/: profile.ftl  ticket.ftl
src/texts/ru/: root.ftl  service.ftl
src/texts/ru/admin/: root.ftl  stat.ftl  ticket.ftl
src/texts/ru/user/: profile.ftl  ticket.ftl
(+8 files in other folders)
